[gd_scene load_steps=4 format=3 uid="uid://biqlg2jdjjyaf"]

[ext_resource type="Script" uid="uid://dq360rysuflbp" path="res://addons/sequence_graph_editor/graph/graph_edit.gd" id="1_lgujk"]
[ext_resource type="Texture2D" uid="uid://d4mtsneqyspfx" path="res://addons/miscallenous/editor/event_flag.png" id="1_xjgn3"]
[ext_resource type="Texture2D" uid="uid://c7lj3fsocwtt8" path="res://addons/miscallenous/editor/sequence_flag.png" id="2_lgujk"]

[node name="graph_edit" type="GraphEdit" node_paths=PackedStringArray("save_data", "load_data", "reset_data", "add_node_menu", "override_data_prompt", "node_context_menu")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lgujk")
save_data = NodePath("panel/v_container/save_graph_data")
load_data = NodePath("panel/v_container/load_graph_data")
reset_data = NodePath("panel/v_container/reset_graph_data")
add_node_menu = NodePath("panel/v_container/event_instantiation_menu")
override_data_prompt = NodePath("override_data_prompt")
node_context_menu = NodePath("node_context_menu")

[node name="panel" type="PanelContainer" parent="."]
z_index = 1
layout_mode = 0
offset_top = 48.0
offset_right = 160.0
offset_bottom = 200.0

[node name="v_container" type="VBoxContainer" parent="panel"]
layout_mode = 2

[node name="save_graph_data" type="Button" parent="panel/v_container"]
layout_mode = 2
text = "Save"

[node name="load_graph_data" type="Button" parent="panel/v_container"]
layout_mode = 2
text = "Load"

[node name="separator_1" type="HSeparator" parent="panel/v_container"]
layout_mode = 2

[node name="reset_graph_data" type="Button" parent="panel/v_container"]
layout_mode = 2
text = "Reset"

[node name="separator2" type="HSeparator" parent="panel/v_container"]
layout_mode = 2

[node name="event_instantiation_menu" type="MenuButton" parent="panel/v_container"]
layout_mode = 2
text = "Add Event"
item_count = 3
popup/item_0/text = "Event"
popup/item_0/icon = ExtResource("1_xjgn3")
popup/item_0/id = 0
popup/item_1/text = "Grouped Event"
popup/item_1/icon = ExtResource("1_xjgn3")
popup/item_1/id = 1
popup/item_2/text = "Sequence"
popup/item_2/icon = ExtResource("2_lgujk")
popup/item_2/id = 2

[node name="override_data_prompt" type="ConfirmationDialog" parent="."]

[node name="node_context_menu" type="PopupMenu" parent="."]
item_count = 1
item_0/text = "Delete"
item_0/id = 0
